# OpenGLRender

./: CMakeLists.txt  CMakePresets.json
shaders/: basic.frag  basic.vert
src/: OpenGLRender.cpp  OpenGLRender.h
src/handle/: Window.cpp  Window.h
src/handle/Errors/: Error.h  ErrorEnums.h
src/opengl/: Initializer.cpp  Initializer.h  Shader.cpp  Shader.h  VAO.cpp  VAO.h
src/opengl/Buffers/: Buffer.cpp  Buffer.h  EBO.h  VBO.h
src/opengl/shader/: Shader.cpp  Shader.h  ShaderParser.cpp  ShaderParser.h
src/opengl/utils/: Basic.cpp  Basic.h
